--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="description" content="" />
 <meta name="keywords" content="" />
 <noscript>
-<link rel="stylesheet" href="css/5grid/core.css" />
+<link rel="stylesheet" href="./css/5grid/core.css" />
 <link rel="stylesheet" href="css/5grid/core-desktop.css" />
 <link rel="stylesheet" href="css/5grid/core-1200px.css" />
 <link rel="stylesheet" href="css/5grid/core-noscript.css" />
