--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="description" content="" />
 <meta name="keywords" content="" />
-<noscript>
-<link rel="stylesheet" href="./css/5grid/core.css" />
+<link rel="stylesheet" href="css/5grid/core.css" />
 <link rel="stylesheet" href="css/5grid/core-desktop.css" />
 <link rel="stylesheet" href="css/5grid/core-1200px.css" />
 <link rel="stylesheet" href="css/5grid/core-noscript.css" />
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/style-desktop.css" />
-</noscript>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="css/5grid/init.js?use=mobile,desktop,1000px&amp;mobileUI=1&amp;mobileUI.theme=none"></script>
 <!--[if IE 9]><link rel="stylesheet" href="css/style-ie9.css" /><![endif]-->
