--- a/index.html
+++ b/index.html
@@ -20,74 +20,63 @@
 
 
   <body class="home-template">
-    <div class="site-wrapper">
-        <header class="site-home-header">
-            <div class="header-with-background">
-                <div from="inner">
-                    <nav class="site-nav">
-                        <div class="site-nav-left-wrapper">
-                            <div class="site-nav-left">
-                                <div class="site-nav-content">
-                                    <ul class="nav" role="menu">
-                                        <li class="nav-logo"  role="menu-item">
-                                            <a href="index.html" class="menu">Zhiyin Tan</a>
-                                        </li>
-                                        <li class="nav-about" role="menu-item">
-                                            <a href="about.html" class="menu">About</a>
-                                        </li>
-                                        <li class="nav-knowledge-base" role="menu-item">
-                                            <a href="knowledgebase.html" class="menu">Knowledge Base</a>
-                                        </li>
-                                        <li class="nav-fairyland" role="menu-item">
-                                            <a href="fairyland.html" class="menu">Fairyland</a>
-                                        </li>
-                                        <li class="nav-contact" role="menu-item">
-                                            <a href="fairyland.html" class="menu">Contact</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </nav>
-                        <div class="site-nav-right" style="float:right">
-                            <div class=social-links>
-                                <ul class="nav-social">
-                                    <li class="nav-social-github">
-                                        <a href="https://github.com/zhiyin121/" title="Github">
-                                            <img class="icon" src="./pic/github_icon.ico" alt="github link">
-                                        </a>
-                                    </li>
-                                    <li class="nav-social-twitter">
-                                        <a href="https://twitter.com/zhiyin_nlp" title="Twitter">
-                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 65 72">
-                                                <path d="M30.063 7.313c-.813 1.125-1.75 2.125-2.875 2.938v.75c0 1.563-.188 3.125-.688 4.625a15.088 15.088 0 0 1-2.063 4.438c-.875 1.438-2 2.688-3.25 3.813a15.015 15.015 0 0 1-4.625 2.563c-1.813.688-3.75 1-5.75 1-3.25 0-6.188-.875-8.875-2.625.438.063.875.125 1.375.125 2.688 0 5.063-.875 7.188-2.5-1.25 0-2.375-.375-3.375-1.125s-1.688-1.688-2.063-2.875c.438.063.813.125 1.125.125.5 0 1-.063 1.5-.25-1.313-.25-2.438-.938-3.313-1.938a5.673 5.673 0 0 1-1.313-3.688v-.063c.813.438 1.688.688 2.625.688a5.228 5.228 0 0 1-1.875-2c-.5-.875-.688-1.813-.688-2.75 0-1.063.25-2.063.75-2.938 1.438 1.75 3.188 3.188 5.25 4.25s4.313 1.688 6.688 1.813a5.579 5.579 0 0 1 1.5-5.438c1.125-1.125 2.5-1.688 4.125-1.688s3.063.625 4.188 1.813a11.48 11.48 0 0 0 3.688-1.375c-.438 1.375-1.313 2.438-2.563 3.188 1.125-.125 2.188-.438 3.313-.875z"/>
-                                            </svg>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
+    <header class="site-home-header">
+        <div class="header-with-background">
+            <nav class="site-nav">
+                <div class="site-nav-left" style="float:left">
+                    <ul class="nav" role="menu">
+                        <li class="nav-logo"  role="menu-item">
+                            <a href="index.html" class="menu">Zhiyin Tan</a>
+                        </li>
+                        <li class="nav-about" role="menu-item">
+                            <a href="about.html" class="menu">About</a>
+                        </li>
+                        <li class="nav-knowledge-base" role="menu-item">
+                            <a href="knowledgebase.html" class="menu">Knowledge Base</a>
+                        </li>
+                        <li class="nav-fairyland" role="menu-item">
+                            <a href="fairyland.html" class="menu">Fairyland</a>
+                        </li>
+                        <li class="nav-contact" role="menu-item">
+                            <a href="fairyland.html" class="menu">Contact</a>
+                        </li>
+                    </ul>
                 </div>
-            </div>
-        </header>
+                <div class="site-nav-right" style="float:right">
+                    <ul class="nav-social">
+                        <li class="nav-social-github">
+                            <a href="https://github.com/zhiyin121/" title="Github">
+                                <img class="icon" src="./pic/github_icon.ico" alt="github link">
+                            </a>
+                        </li>
+                        <li class="nav-social-twitter">
+                            <a href="https://twitter.com/zhiyin_nlp" title="Twitter">
+                                <img class="icon" src="./pic/twitter_round.ico" alt="twitter link">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
 
-        <main class="site-home-main">
-            <div class="site-home-content">
-                <h1 class="site-title"> Zhiyin Tan </h1>
-                <p> Written as <span lang="ch">谭芷茵</span> </p>
-                <p> Email: zhiyin121 [at] gmail [dot] com </p>
-                <p> I'm a M.Sc. student in 
-                    <a href="https://www.ims.uni-stuttgart.de/en/">Institute for Natural Language Processing</a> 
-                    at 
-                    <a href="https://www.uni-stuttgart.de/en/">University of Stuttgart</a> in Germany, 
-                    focusing on problems in <em>contextualisation</em> of <strong>Natural Language Processing</strong> 
-                    and <strong>Knowledge Graph</strong>.
-                </p>
-            </div>
-        </main>
+    <main class="site-home-main">
+        <div class="site-home-content">
+            <h1 class="site-title"> Zhiyin Tan </h1>
+            <p> Written as <span lang="ch">谭芷茵</span> </p>
+            <p> Email: zhiyin121 [at] gmail [dot] com </p>
+            <p> I'm a M.Sc. student in 
+                <a href="https://www.ims.uni-stuttgart.de/en/">Institute for Natural Language Processing</a> 
+                at 
+                <a href="https://www.uni-stuttgart.de/en/">University of Stuttgart</a> in Germany, 
+                focusing on problems in <em>contextualisation</em> of <strong>Natural Language Processing</strong> 
+                and <strong>Knowledge Graph</strong>.
+            </p>
+        </div>
+    </main>
 
-        <div class="site-nav-main"></div>
-        <footer class="site-home-footer"></footer>
-    </div>
+    <div class="site-nav-main"></div>
+    
+    <footer class="site-home-footer"></footer>
   </body>
 </html>
