--- a/index.html
+++ b/index.html
@@ -73,10 +73,19 @@
                 and <strong>Knowledge Graph</strong>.
             </p>
         </div>
+        <div class="site-home-content-rightblank">
+            <p> </p>
+        </div>        
     </main>
 
-    <div class="site-nav-main"></div>
+    <div class="site-nav-main">
+        
+    </div>
     
-    <footer class="site-home-footer"></footer>
+    <footer class="site-home-footer">
+        <section class="copyright">
+            Zhiyin Tan © 2021
+        </section>
+    </footer>
   </body>
 </html>
