--- a/index.html
+++ b/index.html
@@ -63,17 +63,21 @@
 
     <main class="site-home-main">
         <div class="site-home-content">
-            <h1 class="site-title"> Zhiyin Tan </h1>
-            <p> Written as <span lang="ch">谭芷茵</span> </p>
-            <p> Pronounced close to "Ginn Tan" </p>
-            <p> Email: zhiyin121 [at] gmail [dot] com </p>
-            <p> I'm a M.Sc. student in 
-                <a href="https://www.ims.uni-stuttgart.de/en/">Institute for Natural Language Processing</a> 
-                at 
-                <a href="https://www.uni-stuttgart.de/en/">University of Stuttgart</a> in Germany, 
-                focusing on problems in <em>contextualisation</em> of <strong>Natural Language Processing</strong> 
-                and <strong>Knowledge Graph</strong>.
-            </p>
+            <div class="namecard">            
+                <h1 class="site-title"> Zhiyin Tan </h1>
+                <p> Written as <span lang="ch">谭芷茵</span> </p>
+                <p> Pronounced close to "Ginn Tan" </p>
+                <p> Email: zhiyin121 [at] gmail [dot] com </p>
+            </div>
+            <div class="intro">  
+                <p> I'm a M.Sc. student in 
+                    <a href="https://www.ims.uni-stuttgart.de/en/">Institute for Natural Language Processing</a> 
+                    at 
+                    <a href="https://www.uni-stuttgart.de/en/">University of Stuttgart</a> in Germany, 
+                    focusing on problems in <em>contextualisation</em> of <strong>Natural Language Processing</strong> 
+                    and <strong>Knowledge Graph</strong>.
+                </p>
+            </div>
         </div>
         <div class="site-home-content-rightblank">
             <p> </p>
