--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="site-home-header">
         <div class="header-with-background">
             <nav class="site-nav">
-                <div class="site-nav-left" id="navbarResponsive" style="float:left">
+                <div class="site-nav-two" id="navbarResponsive" style="float:left">
                     <ul class="nav" role="menu">
                         <li class="nav-logo"  role="menu-item">
                             <a href="index.html" class="menu">Zhiyin Tan</a>
@@ -42,8 +42,6 @@
                             <a href="fairyland.html" class="menu">Contact</a>
                         </li>
                     </ul>
-                </div>
-                <div class="site-nav-right" style="float:right">
                     <ul class="nav-social">
                         <li class="nav-social-github">
                             <a href="https://github.com/zhiyin121/" title="Github">
