--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <script src="./js/index.js" defer></script>
   </head>
 
-
-
   <body class="site-home">
     <header class="site-home-header">
         <div class="header-with-background">
@@ -71,9 +69,8 @@
                 <p> I'm a M.Sc. student in 
                     <a href="https://www.ims.uni-stuttgart.de/en/">Institute for Natural Language Processing</a> 
                     at 
-                    <a href="https://www.uni-stuttgart.de/en/">University of Stuttgart</a> in Germany, 
-                    focusing on problems in <em>contextualisation</em> of <strong>Natural Language Processing</strong> 
-                    and <strong>Knowledge Graph</strong>.
+                    <a href="https://www.uni-stuttgart.de/en/">University of Stuttgart</a> in Germany,
+                    focusing on problems in <em>contextualisation</em> of <strong>Natural Language Processing</strong>.
                 </p>
             </div>
         </div>
@@ -81,9 +78,6 @@
             <p> </p>
         </div>        
     </main>
-
-    <!--<div class="site-nav-main">
-    </div>-->
     
     <footer class="site-home-footer">
         <section class="copyright">
