--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                     at 
                     <a href="https://www.uni-stuttgart.de/en/">University of Stuttgart</a> in Germany,
                     focusing on problems in <em>contextualisation</em> of <strong>Natural Language Processing</strong>.
+                    Currently, I am working on ...
                 </p>
             </div>
         </div>
