--- a/contact.html
+++ b/contact.html
@@ -1,2 +1,75 @@
-<a href="mailto:zhiyin121@gmail.com?subject=[ZYFL]%20-%20">
-    <img class="icon" src="./pic/gmail_icon.ico" alt="gmail link">
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <title>Zhiyin's Contact</title>
+    <meta name="author" content="Zhiyin Tan">
+    <meta name="description" content="Personal fairyland: animation, thoughts">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property="og:image" content="https://www.icloud.com/iclouddrive/0OuJofHg8h4NTxXeb0weLM3ng#Little_fox's_back-big" />
+    <meta property="og:description" content="Zhiyin Tan's fairyland.">
+    <meta property="og:title" content="Zhiyin's Fairyland" />
+    <meta property="og:type" content="website" />    
+
+    <link rel="Shortcut Icon" href="./pic/little_fox_round.ico" type="image/x-icon">
+
+    <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/index.js" defer></script>
+  </head>
+
+  <body class="site-ct">
+    <header class="site-home-header">
+        <div class="header-with-background">
+            <nav class="site-nav">
+                <div class="site-nav-two" id="navbarResponsive" style="float:left">
+                    <ul class="nav" role="menu">
+                        <li class="nav-logo"  role="menu-item">
+                            <a href="index.html" class="menu">Zhiyin Tan</a>
+                        </li>
+                        <li class="nav-about" role="menu-item">
+                            <a href="about.html" class="menu">About</a>
+                        </li>
+                        <li class="nav-knowledge-base" role="menu-item">
+                            <a href="knowledgebase.html" class="menu">Knowledge Base</a>
+                        </li>
+                        <li class="nav-fairyland" role="menu-item">
+                            <a href="fairyland.html" class="menu">Fairyland</a>
+                        </li>
+                        <li class="nav-contact" role="menu-item">
+                            <a href="fairyland.html" class="menu">Contact</a>
+                        </li>
+                    </ul>
+                    <ul class="nav-social">
+                        <li class="nav-social-github">
+                            <a href="https://github.com/zhiyin121/" title="Github">
+                                <img class="icon" src="./pic/github_icon.ico" alt="github link">
+                            </a>
+                        </li>
+                        <li class="nav-social-twitter">
+                            <a href="https://twitter.com/zhiyin_nlp" title="Twitter">
+                                <img class="icon" src="./pic/twitter_round.ico" alt="twitter link">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+    <main class="site-ct-main">
+        <div class="site-ct-content">          
+            <h1 class="site-title"> Contect Me </h1>
+            <p> 
+                <a href="mailto:zhiyin121@gmail.com?subject=[ZYFL]%20-%20">
+                <img class="icon" src="./pic/gmail_icon.ico" alt="gmail link">
+            </p>
+    </main>
+    
+    <footer class="site-home-footer">
+        <section class="copyright">
+            Zhiyin Tan © 2021
+        </section>
+    </footer>
+  </body>
+</html>
