--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                             <a href="fairyland.html" class="menu">Fairyland</a>
                         </li>
                         <li class="nav-contact" role="menu-item">
-                            <a href="fairyland.html" class="menu">Contact</a>
+                            <a href="contact.html" class="menu">Contact</a>
                         </li>
                     </ul>
                     <ul class="nav-social">
@@ -60,7 +60,7 @@
     <main class="site-ct-main">
         <div class="site-ct-content">          
             <h1 class="site-title"> Contect Me </h1>
-            <p> 
+            <p>
                 <a href="mailto:zhiyin121@gmail.com?subject=[ZYFL]%20-%20">
                 <img class="icon" src="./pic/gmail_icon.ico" alt="gmail link">
             </p>
