--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <a href="fairyland.html" class="menu">Fairyland</a>
                         </li>
                         <li class="nav-contact" role="menu-item">
-                            <a href="fairyland.html" class="menu">Contact</a>
+                            <a href="contect.html" class="menu">Contact</a>
                         </li>
                     </ul>
                     <ul class="nav-social">
@@ -63,7 +63,7 @@
                 <h1 class="site-title"> Zhiyin Tan </h1>
                 <p> Written as <span lang="ch">谭芷茵</span> </p>
                 <p> Pronounced close to "Ginn Tan" </p>
-                <p> Email: zhiyin121 [at] gmail [dot] com </p>
+                
             </div>
             <div class="intro">  
                 <p> I'm a M.Sc. student in 
