--- a/fairyland.html
+++ b/fairyland.html
@@ -37,7 +37,7 @@
                             <a href="fairyland.html" class="menu">Fairyland</a>
                         </li>
                         <li class="nav-contact" role="menu-item">
-                            <a href="fairyland.html" class="menu">Contact</a>
+                            <a href="contact.html" class="menu">Contact</a>
                         </li>
                     </ul>
                     <ul class="nav-social">
