--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,8 @@
             <h1 class="site-title"> Contect Me </h1>
             <p>
                 <a href="mailto:zhiyin121@gmail.com?subject=[ZYFL]%20-%20">
-                <img class="icon" src="./pic/gmail_icon.ico" alt="gmail link"></a>
+                    <img class="icon" src="./pic/gmail_icon.ico" alt="gmail link">
+                </a>
             </p>
     </main>
     
