--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
     
     <footer class="site-home-footer">
         <section class="copyright">
-            Zhiyin Tan © 2021
+            © 2021 Zhiyin Tan
         </section>
     </footer>
   </body>
