--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
     
     <footer class="site-home-footer">
         <section class="copyright">
-            Zhiyin Tan © 2021
+            © 2021 Zhiyin Tan
         </section>
     </footer>
   </body>
