--- a/fairyland.html
+++ b/fairyland.html
@@ -66,7 +66,7 @@
     
     <footer class="site-home-footer">
         <section class="copyright">
-            Zhiyin Tan © 2021
+            © 2021 Zhiyin Tan
         </section>
     </footer>
   </body>
