--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     
     <footer class="site-home-footer">
         <section class="copyright">
-            Zhiyin Tan © 2021
+            © 2021 Zhiyin Tan
         </section>
     </footer>
   </body>
