--- a/knowledgebase.html
+++ b/knowledgebase.html
@@ -60,13 +60,20 @@
     <main class="site-kg-main">
         <div class="site-kg-content">          
             <h1 class="site-title"> Knowledge Base </h1>
-            <p>Coming soon...</p>
+            <dl>
+                <dt>soliloquy</dt>
+                <dd>In drama, where a character speaks to themselves, representing their inner thoughts or feelings and in the process relaying them to the audience (but not to other characters.)</dd>
+                <dt>monologue</dt>
+                <dd>In drama, where a character speaks their thoughts out loud to share them with the audience and any other characters present.</dd>
+                <dt>aside</dt>
+                <dd>In drama, where a character shares a comment only with the audience for humorous or dramatic effect. This is usually a feeling, thought, or piece of additional background information.</dd>
+            </dl>
       
     </main>
     
     <footer class="site-home-footer">
         <section class="copyright">
-            Zhiyin Tan © 2021
+            © 2021 Zhiyin Tan
         </section>
     </footer>
   </body>
