--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 <div class="site-nav-two" id="navbarResponsive" style="float:left">
                     <ul class="nav" role="menu">
                         <li class="nav-logo"  role="menu-item">
-                            <a href="index.html" class="menu">Zhiyin Tan</a>
+                            <a href="index.html" class="menu">
+                                <img class="logo" src="./pic/logo.ico">
+                            </a>
                         </li>
                         <li class="nav-about" role="menu-item">
                             <a href="about.html" class="menu">About</a>
