--- a/fairyland.html
+++ b/fairyland.html
@@ -23,10 +23,12 @@
         <div class="header-with-background">
             <nav class="site-nav">
                 <div class="site-nav-two" id="navbarResponsive" style="float:left">
+                    <div class="nav-logo"  role="menu-item">
+                        <a href="index.html" class="menu">
+                            <img class="logo" src="./pic/logo.ico">
+                        </a>
+                    </div>
                     <ul class="nav" role="menu">
-                        <li class="nav-logo"  role="menu-item">
-                            <a href="index.html" class="menu">Zhiyin Tan</a>
-                        </li>
                         <li class="nav-about" role="menu-item">
                             <a href="about.html" class="menu">About</a>
                         </li>
