--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <div class="header-with-background">
             <nav class="site-nav">
                 <div class="site-nav-two" id="navbarResponsive" style="float:left">
+                    <div class="nav-logo"  role="menu-item">
+                        <a href="index.html" class="menu">
+                            <img class="logo" src="./pic/logo.ico">
+                        </a>
+                    </div>
                     <ul class="nav" role="menu">
-                        <li class="nav-logo"  role="menu-item">
-                            <a href="index.html" class="menu">
-                                <img class="logo" src="./pic/logo.ico">
-                            </a>
-                        </li>
                         <li class="nav-about" role="menu-item">
                             <a href="about.html" class="menu">About</a>
                         </li>
@@ -39,7 +39,7 @@
                             <a href="fairyland.html" class="menu">Fairyland</a>
                         </li>
                         <li class="nav-contact" role="menu-item">
-                            <a href="contect.html" class="menu">Contact</a>
+                            <a href="contact.html" class="menu">Contact</a>
                         </li>
                     </ul>
                     <ul class="nav-social">
