--- a/knowledgebase.html
+++ b/knowledgebase.html
@@ -62,15 +62,21 @@
     <main class="site-kg-main">
         <div class="site-kg-content">          
             <h1 class="site-title"> Knowledge Base </h1>
-            <dl>
-                <dt>soliloquy</dt>
-                <dd>In drama, where a character speaks to themselves, representing their inner thoughts or feelings and in the process relaying them to the audience (but not to other characters.)</dd>
-                <dt>monologue</dt>
-                <dd>In drama, where a character speaks their thoughts out loud to share them with the audience and any other characters present.</dd>
-                <dt>aside</dt>
-                <dd>In drama, where a character shares a comment only with the audience for humorous or dramatic effect. This is usually a feeling, thought, or piece of additional background information.</dd>
-            </dl>
-      
+            <div class="knowledge-card">
+                <div class="card">
+                    <p>lalala1</p>
+                </div> 
+                <div class="card">
+                    <p>lalala2</p>
+                </div> 
+                <div class="card">
+                    <p>lalala3</p>
+                </div> 
+                <div class="card">
+                    <p>lalala4</p>
+                </div> 
+            </div>
+
     </main>
     
     <footer class="site-home-footer">
@@ -80,3 +86,7 @@
     </footer>
   </body>
 </html>
+
+
+
+
