--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Zhiyin's Homepage</title>
     <meta name="author" content="Zhiyin Tan">
     <meta name="description" content="Personal knowledge record fairyland: natural language processing(nlp), animation, thoughts">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 
     <meta property="og:image" content="https://www.icloud.com/iclouddrive/0OuJofHg8h4NTxXeb0weLM3ng#Little_fox's_back-big" />
     <meta property="og:description" content="Zhiyin Tan's fairyland.">
