--- a/contact.html
+++ b/contact.html
@@ -48,11 +48,7 @@
                                 <img class="icon" src="./pic/github_icon.ico" alt="github link">
                             </a>
                         </li>
-                        <li class="nav-social-twitter">
-                            <a href="https://twitter.com/zhiyin_nlp" title="Twitter">
-                                <img class="icon" src="./pic/twitter_round.ico" alt="twitter link">
-                            </a>
-                        </li>
+
                     </ul>
                 </div>
             </nav>
@@ -62,10 +58,18 @@
     <main class="site-ct-main">
         <div class="site-ct-content">          
             <h1 class="site-title"> Contect Me </h1>
-            <p>
-                <a href="mailto:zhiyin121@gmail.com?subject=[ZYFL]%20-%20">
+            <ul class="contact-icons">
+                <li class="contact-email">
+                    <a href="mailto:zhiyin121@gmail.com?subject=[ZYFL]%20-%20">
                     <img class="icon" src="./pic/gmail_icon.ico" alt="gmail link">
-                </a>
+                    </a>
+                </li>
+                <li class="contact-twitter">
+                    <a href="https://twitter.com/zhiyin_nlp" title="Twitter">
+                    <img class="icon" src="./pic/twitter_round.ico" alt="twitter link">
+                    </a>
+                </li>
+                
             </p>
     </main>
     
