--- a/fairyland.html
+++ b/fairyland.html
@@ -38,9 +38,6 @@
                         <li class="nav-fairyland" role="menu-item">
                             <a href="fairyland.html" class="menu">Fairyland</a>
                         </li>
-                        <li class="nav-contact" role="menu-item">
-                            <a href="contact.html" class="menu">Contact</a>
-                        </li>
                     </ul>
                     <ul class="nav-social">
                         <li class="nav-social-github">
@@ -62,8 +59,30 @@
     </main>
     
     <footer class="site-home-footer">
-        <section class="copyright">
-            © 2021 Zhiyin Tan
+        <section class="footer">
+            <div class="copyright-contact">
+                <p class="copyright"> © 2021 Zhiyin Tan</p>
+                <ul class="footer-contact">
+                    <li class="contact-email">
+                        <a class="email" href="mailto:zhiyin121@gmail.com?subject=[ZYFL]%20-%20">
+                        <img class="contact-icon" src="./pic/gmail_icon.ico" alt="gmail link"> 
+                        <p class="text-email">  Email </p> 
+                        </a>
+                    </li>
+                    <li class="contact-twitter">
+                        <a class="twitter" href="https://twitter.com/zhiyin_nlp" title="Twitter">
+                        <img class="contact-icon" src="./pic/twitter_round.ico" alt="twitter link">
+                        <p class="text-twitter"> Twitter </p>
+                        </a>
+                    </li>
+                    <li class="contact-linkedin">
+                        <a class="linkedin" href="https://www.linkedin.com/in/zhiyin-tan/" title="Linkedin">
+                        <img class="contact-icon" src="./pic/twitter_round.ico" alt="linkedin link">
+                        <p class="text-linkedin"> Linkedin </p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </footer>
   </body>
