update header and main

--- a/about.html
+++ b/about.html
@@ -20,35 +20,31 @@
 
   <body class="site-ab">
     <header class="site-home-header">
-        <div class="header-with-background">
-            <nav class="site-nav">
-                <div class="site-nav-two" id="navbarResponsive" style="float:left">
-                    <div class="nav-logo"  role="menu-item">
-                        <a href="index.html" class="menu">
-                            <img class="logo" src="./pic/logo.ico">
-                        </a>
-                    </div>
-                    <ul class="nav" role="menu">
-                        <li class="nav-about" role="menu-item">
-                            <a href="about.html" class="menu">About</a>
-                        </li>
-                        <li class="nav-knowledge-base" role="menu-item">
-                            <a href="knowledgebase.html" class="menu">Knowledge Base</a>
-                        </li>
-                        <li class="nav-fairyland" role="menu-item">
-                            <a href="fairyland.html" class="menu">Fairyland</a>
-                        </li>
-                    </ul>
-                    <ul class="nav-social">
-                        <li class="nav-social-github">
-                            <a href="https://github.com/zhiyin121/" title="Github">
-                                <img class="icon" src="./pic/github_icon.ico" alt="github link">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+        <nav class="site-nav-three" id="navbarResponsive" style="float:left">
+            <div class="nav-logo"  role="menu-item">
+                <a href="index.html" class="menu">
+                    <img class="logo" src="./pic/logo.ico">
+                </a>
+            </div>
+            <ul class="nav" role="menu">
+                <li class="nav-about" role="menu-item">
+                    <a href="about.html" class="menu">About</a>
+                </li>
+                <li class="nav-knowledge-base" role="menu-item">
+                    <a href="knowledgebase.html" class="menu">Knowledge Base</a>
+                </li>
+                <li class="nav-fairyland" role="menu-item">
+                    <a href="fairyland.html" class="menu">Fairyland</a>
+                </li>
+            </ul>
+            <ul class="nav-social">
+                <li class="nav-social-github">
+                    <a href="https://github.com/zhiyin121/" title="Github">
+                        <img class="icon" src="./pic/github_icon.ico" alt="github link">
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <main class="site-ab-main">
@@ -84,6 +80,7 @@
                         </a>
                     </li>
                 </ul>
+                <p></p>
             </div>
         </section>
     </footer>
