--- a/knowledgebase.html
+++ b/knowledgebase.html
@@ -46,54 +46,55 @@
             </ul>
         </nav>
     </header>
-
-    <main class="site-kg-main">
-        <div class="site-kg-content">          
-            <h1 class="site-title"> Knowledge Base </h1>
-            <div class="knowledge-card">
-                <div class="card">
-                    <p>lalala1</p>
-                </div> 
-                <div class="card">
-                    <p>lalala2</p>
-                </div> 
-                <div class="card">
-                    <p>lalala3</p>
-                </div> 
-                <div class="card">
-                    <p>lalala4</p>
-                </div> 
+    
+    <div class="container">
+        <main class="site-kg-main">
+            <div class="site-kg-content">          
+                <h1 class="site-title"> Knowledge Base </h1>
+                <div class="knowledge-card">
+                    <div class="card">
+                        <p>lalala1</p>
+                    </div> 
+                    <div class="card">
+                        <p>lalala2</p>
+                    </div> 
+                    <div class="card">
+                        <p>lalala3</p>
+                    </div> 
+                    <div class="card">
+                        <p>lalala4</p>
+                    </div> 
+                </div>
             </div>
-        </div>
-    </main>
+        </main>
 
-    <footer class="site-home-footer">
-        <div class="copyright-contact">
-            <p class="copyright"> © 2021 Zhiyin Tan</p>
-            <ul class="footer-contact">
-                <li class="contact-email">
-                    <a class="email" href="mailto:zhiyin121@gmail.com?subject=[ZYFL]%20-%20">
-                    <img class="contact-icon" src="./pic/gmail_icon.ico" alt="gmail link"> 
-                    <p class="text-email">  Email </p> 
-                    </a>
-                </li>
-                <li class="contact-twitter">
-                    <a class="twitter" href="https://twitter.com/zhiyin_nlp" title="Twitter">
-                    <img class="contact-icon" src="./pic/twitter_round.ico" alt="twitter link">
-                    <p class="text-twitter"> Twitter </p>
-                    </a>
-                </li>
-                <li class="contact-linkedin">
-                    <a class="linkedin" href="https://www.linkedin.com/in/zhiyin-tan/" title="Linkedin">
-                    <img class="contact-icon" src="./pic/twitter_round.ico" alt="linkedin link">
-                    <p class="text-linkedin"> Linkedin </p>
-                    </a>
-                </li>
-            </ul>
-            <p></p>
-        </div>
-    </footer>
-
+        <footer class="site-home-footer">
+            <div class="copyright-contact">
+                <p class="copyright"> © 2021 Zhiyin Tan</p>
+                <ul class="footer-contact">
+                    <li class="contact-email">
+                        <a class="email" href="mailto:zhiyin121@gmail.com?subject=[ZYFL]%20-%20">
+                        <img class="contact-icon" src="./pic/gmail_icon.ico" alt="gmail link"> 
+                        <p class="text-email">  Email </p> 
+                        </a>
+                    </li>
+                    <li class="contact-twitter">
+                        <a class="twitter" href="https://twitter.com/zhiyin_nlp" title="Twitter">
+                        <img class="contact-icon" src="./pic/twitter_round.ico" alt="twitter link">
+                        <p class="text-twitter"> Twitter </p>
+                        </a>
+                    </li>
+                    <li class="contact-linkedin">
+                        <a class="linkedin" href="https://www.linkedin.com/in/zhiyin-tan/" title="Linkedin">
+                        <img class="contact-icon" src="./pic/twitter_round.ico" alt="linkedin link">
+                        <p class="text-linkedin"> Linkedin </p>
+                        </a>
+                    </li>
+                </ul>
+                <p></p>
+            </div>
+        </footer>
+    </div>
   </body>
 </html>
 
