update linkedin logo

--- a/knowledgebase.html
+++ b/knowledgebase.html
@@ -46,7 +46,7 @@
             </ul>
         </nav>
     </header>
-    
+
     <div class="container">
         <main class="site-kg-main">
             <div class="site-kg-content">          
@@ -86,7 +86,7 @@
                     </li>
                     <li class="contact-linkedin">
                         <a class="linkedin" href="https://www.linkedin.com/in/zhiyin-tan/" title="Linkedin">
-                        <img class="contact-icon" src="./pic/twitter_round.ico" alt="linkedin link">
+                        <img class="contact-icon" src="./pic/linkedin.ico" alt="linkedin link">
                         <p class="text-linkedin"> Linkedin </p>
                         </a>
                     </li>
