--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
                     </li>
                     <li class="contact-linkedin">
                         <a class="linkedin" href="https://www.linkedin.com/in/zhiyin-tan/" title="Linkedin">
-                        <img class="contact-icon" src="./pic/twitter_round.ico" alt="linkedin link">
+                        <img class="contact-icon" src="./pic/linkedin.ico" alt="linkedin link">
                         <p class="text-linkedin"> Linkedin </p>
                         </a>
                     </li>
