--- a/knowledgebase.html
+++ b/knowledgebase.html
@@ -49,7 +49,7 @@
 
     <div class="container">
         <main class="site-kg-main">
-            <div class="site-kg-content">          
+            <div id="start" class="site-kg-content">          
                 <h1 class="site-title"> Knowledge Base </h1>
                 <div class="knowledge-card">
                     <div class="card">
@@ -66,6 +66,11 @@
                     </div> 
                 </div>
             </div>
+            <div style="display:block;z-index: 1000;position: fixed;right: 1px;bottom: 10%;width: 50px;opacity: 0.8;margin-right: 5px;">
+                <a href="#start">
+                    <img class="to-top" src="./pic/top-arrow_square.ico">
+                </a>
+              </div>
         </main>
 
         <footer class="site-home-footer">
