update knowledge base template

--- a/knowledgebase.html
+++ b/knowledgebase.html
@@ -53,16 +53,48 @@
                 <h1 class="site-title"> Knowledge Base </h1>
                 <div class="knowledge-card">
                     <div class="card">
-                        <p>lalala1</p>
+                        <a class="card-title" href="https://google.com">
+                            <div class="card-cover-image">
+                                <img class="cover-image" src="./pic/purple_sea.png">
+                            </div>
+                            <div class="card-cover-title">
+                                <h4>Title</h4>
+                                <p>Description</p>
+                            </div>
+                        </a>
                     </div> 
                     <div class="card">
-                        <p>lalala2</p>
+                        <a class="card-title">
+                            <div class="card-cover-image">
+                                <img class="cover-image" src="./pic/Rooms_by_the_sea.png">
+                            </div>
+                            <div class="card-cover-title">
+                                <h4>Title</h4>
+                                <p>Description</p>
+                            </div>
+                        </a>
                     </div> 
                     <div class="card">
-                        <p>lalala3</p>
+                        <a class="card-title">
+                            <div class="card-cover-image">
+                                <img class="cover-image" src="./pic/beach.png">
+                            </div>
+                            <div class="card-cover-title">
+                                <h4>Title</h4>
+                                <p>Description</p>
+                            </div>
+                        </a>
                     </div> 
                     <div class="card">
-                        <p>lalala4</p>
+                        <a class="card-title">
+                            <div class="card-cover-image">
+                                <img class="cover-image" src="./pic/flower.png">
+                            </div>
+                            <div class="card-cover-title">
+                                <h4>Title</h4>
+                                <p>Description</p>
+                            </div>
+                        </a>
                     </div> 
                 </div>
             </div>
