--- a/knowledgebase.html
+++ b/knowledgebase.html
@@ -53,7 +53,7 @@
                 <h1 class="site-title"> Knowledge Base </h1>
                 <div class="knowledge-card">
                     <div class="card">
-                        <a class="card-title" href="https://google.com">
+                        <a class="card-title" href="http://example.org/#blog">
                             <div class="card-cover-image">
                                 <img class="cover-image" src="./pic/purple_sea.png">
                             </div>
@@ -64,7 +64,7 @@
                         </a>
                     </div> 
                     <div class="card">
-                        <a class="card-title">
+                        <a class="card-title" href="http://example.org/#blog">
                             <div class="card-cover-image">
                                 <img class="cover-image" src="./pic/Rooms_by_the_sea.png">
                             </div>
@@ -75,7 +75,7 @@
                         </a>
                     </div> 
                     <div class="card">
-                        <a class="card-title">
+                        <a class="card-title" href="http://example.org/#blog">
                             <div class="card-cover-image">
                                 <img class="cover-image" src="./pic/beach.png">
                             </div>
@@ -86,7 +86,7 @@
                         </a>
                     </div> 
                     <div class="card">
-                        <a class="card-title">
+                        <a class="card-title" href="http://example.org/#blog">
                             <div class="card-cover-image">
                                 <img class="cover-image" src="./pic/flower.png">
                             </div>
