--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 
     <div class="container">
         <main class="site-ab-main">
-            <div class="site-ab-content">          
+            <div id="start" class="site-ab-content">          
                 <h1 class="site-title"> About Me </h1>
                 <p>My resume is available 
                     <a href="https://www.visualcv.com/zhiyin_cv/"
