--- a/fairyland.html
+++ b/fairyland.html
@@ -49,7 +49,7 @@
 
     <div class="container">
         <main class="site-fl-main">
-            <div class="site-fl-content">          
+            <div id="start" class="site-fl-content">          
                 <h1 class="site-title"> Fairyland </h1>
                 <p>Coming soon...</p>
             </div>
