--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="container">
         <main class="site-home-main">
-            <div class="site-home-content">
+            <div id="start" class="site-home-content">
                 <div class="namecard">            
                     <h1 class="site-title"> Zhiyin Tan </h1>
                     <p> Written as <span lang="ch">谭芷茵</span> </p>
