--- a/knowledgebase.html
+++ b/knowledgebase.html
@@ -55,33 +55,22 @@
                     <div class="card">
                         <a class="card-title" href="http://example.org/#blog">
                             <div class="card-cover-image">
-                                <img class="cover-image" src="./pic/purple_sea.png">
-                            </div>
-                            <div class="card-cover-title">
-                                <h4>Title</h4>
-                                <p>Description</p>
-                            </div>
-                        </a>
-                    </div> 
-                    <div class="card">
-                        <a class="card-title" href="http://example.org/#blog">
-                            <div class="card-cover-image">
                                 <img class="cover-image" src="./pic/Rooms_by_the_sea.png">
                             </div>
                             <div class="card-cover-title">
-                                <h4>Title</h4>
-                                <p>Description</p>
+                                <h4> Computational Linguistics </h4>
+                                <h5> AI, NLP, ML, DL </h5>
                             </div>
                         </a>
                     </div> 
                     <div class="card">
                         <a class="card-title" href="http://example.org/#blog">
                             <div class="card-cover-image">
-                                <img class="cover-image" src="./pic/beach.png">
+                                <img class="cover-image" src="./pic/purple_sea.png">
                             </div>
                             <div class="card-cover-title">
-                                <h4>Title</h4>
-                                <p>Description</p>
+                                <h4> Human Language </h4>
+                                <h5> Cantonese </h5>
                             </div>
                         </a>
                     </div> 
@@ -91,8 +80,19 @@
                                 <img class="cover-image" src="./pic/flower.png">
                             </div>
                             <div class="card-cover-title">
-                                <h4>Title</h4>
-                                <p>Description</p>
+                                <h4> Knowledge Graph </h4>
+                                <h5> RDF, SHACL, OWL </h5>
+                            </div>
+                        </a>
+                    </div> 
+                    <div class="card">
+                        <a class="card-title" href="http://example.org/#blog">
+                            <div class="card-cover-image">
+                                <img class="cover-image" src="./pic/beach.png">
+                            </div>
+                            <div class="card-cover-title">
+                                <h4> Fishing </h4>
+                                <h5> Days with Dad </h5>
                             </div>
                         </a>
                     </div> 
