--- a/html/about.html
+++ b/html/about.html
@@ -14,8 +14,8 @@
 
     <link rel="Shortcut Icon" href="./pic/little_fox_round.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/index.js" defer></script>
+    <link rel="stylesheet" href="../css/index.css">
+    <script src="../js/index.js" defer></script>
   </head>
 
   <body class="site-ab">
@@ -23,7 +23,7 @@
         <nav class="site-nav-three" id="navbarResponsive" style="float:left">
             <div class="nav-logo"  role="menu-item">
                 <a href="index.html" class="menu">
-                    <img class="logo" src="./pic/logo.ico">
+                    <img class="logo" src="../pic/logo.ico">
                 </a>
             </div>
             <ul class="nav" role="menu">
@@ -40,7 +40,7 @@
             <ul class="nav-social">
                 <li class="nav-social-github">
                     <a href="https://github.com/zhiyin121/" title="Github">
-                        <img class="icon" src="./pic/github_icon.ico" alt="github link">
+                        <img class="icon" src="../pic/github_icon.ico" alt="github link">
                     </a>
                 </li>
             </ul>
@@ -61,7 +61,7 @@
             </div>
             <div style="display:block;z-index: 1000;position: fixed;right: 1px;bottom: 20%;width: 50px;opacity: 0.8;margin-right: 5px;">
                 <a href="#start">
-                    <img class="to-top" src="./pic/top-arrow_square.ico">
+                    <img class="to-top" src="../pic/top-arrow_square.ico">
                 </a>
             </div>
         </main>
@@ -72,19 +72,19 @@
                 <ul class="footer-contact">
                     <li class="contact-email">
                         <a class="email" href="mailto:zhiyin121@gmail.com?subject=[ZYFL]%20-%20">
-                        <img class="contact-icon" src="./pic/gmail_icon.ico" alt="gmail link"> 
+                        <img class="contact-icon" src="../pic/gmail_icon.ico" alt="gmail link"> 
                         <p class="text-email">  Email </p> 
                         </a>
                     </li>
                     <li class="contact-twitter">
                         <a class="twitter" href="https://twitter.com/zhiyin_nlp" title="Twitter">
-                        <img class="contact-icon" src="./pic/twitter_round.ico" alt="twitter link">
+                        <img class="contact-icon" src="../pic/twitter_round.ico" alt="twitter link">
                         <p class="text-twitter"> Twitter </p>
                         </a>
                     </li>
                     <li class="contact-linkedin">
                         <a class="linkedin" href="https://www.linkedin.com/in/zhiyin-tan/" title="Linkedin">
-                        <img class="contact-icon" src="./pic/linkedin.ico" alt="linkedin link">
+                        <img class="contact-icon" src="../pic/linkedin.ico" alt="linkedin link">
                         <p class="text-linkedin"> Linkedin </p>
                         </a>
                     </li>
