--- a/html/knowledgebase.html
+++ b/html/knowledgebase.html
@@ -12,10 +12,10 @@
     <meta property="og:title" content="Zhiyin's Fairyland" />
     <meta property="og:type" content="website" />    
 
-    <link rel="Shortcut Icon" href="./pic/little_fox_round.ico" type="image/x-icon">
+    <link rel="Shortcut Icon" href="../pic/little_fox_round.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/index.js" defer></script>
+    <link rel="stylesheet" href="../css/index.css">
+    <script src="../js/index.js" defer></script>
   </head>
 
   <body class="site-kb">
@@ -23,7 +23,7 @@
         <nav class="site-nav-three" id="navbarResponsive" style="float:left">
             <div class="nav-logo"  role="menu-item">
                 <a href="index.html" class="menu">
-                    <img class="logo" src="./pic/logo.ico">
+                    <img class="logo" src="../pic/logo.ico">
                 </a>
             </div>
             <ul class="nav" role="menu">
@@ -40,7 +40,7 @@
             <ul class="nav-social">
                 <li class="nav-social-github">
                     <a href="https://github.com/zhiyin121/" title="Github">
-                        <img class="icon" src="./pic/github_icon.ico" alt="github link">
+                        <img class="icon" src="../pic/github_icon.ico" alt="github link">
                     </a>
                 </li>
             </ul>
@@ -55,7 +55,7 @@
                     <div class="card">
                         <a class="card-title" href="http://example.org/#blog">
                             <div class="card-cover-image">
-                                <img class="cover-image" src="./pic/Rooms_by_the_sea.png">
+                                <img class="cover-image" src="../pic/Rooms_by_the_sea.png">
                             </div>
                             <div class="card-cover-title">
                                 <h4> Computational Linguistics </h4>
@@ -66,7 +66,7 @@
                     <div class="card">
                         <a class="card-title" href="http://example.org/#blog">
                             <div class="card-cover-image">
-                                <img class="cover-image" src="./pic/purple_sea.png">
+                                <img class="cover-image" src="../pic/purple_sea.png">
                             </div>
                             <div class="card-cover-title">
                                 <h4> Human Language </h4>
@@ -77,7 +77,7 @@
                     <div class="card">
                         <a class="card-title" href="http://example.org/#blog">
                             <div class="card-cover-image">
-                                <img class="cover-image" src="./pic/flower.png">
+                                <img class="cover-image" src="../pic/flower.png">
                             </div>
                             <div class="card-cover-title">
                                 <h4> Knowledge Graph </h4>
@@ -88,7 +88,7 @@
                     <div class="card">
                         <a class="card-title" href="http://example.org/#blog">
                             <div class="card-cover-image">
-                                <img class="cover-image" src="./pic/beach.png">
+                                <img class="cover-image" src="../pic/beach.png">
                             </div>
                             <div class="card-cover-title">
                                 <h4> Fishing </h4>
@@ -111,19 +111,19 @@
                 <ul class="footer-contact">
                     <li class="contact-email">
                         <a class="email" href="mailto:zhiyin121@gmail.com?subject=[ZYFL]%20-%20">
-                        <img class="contact-icon" src="./pic/gmail_icon.ico" alt="gmail link"> 
+                        <img class="contact-icon" src="../pic/gmail_icon.ico" alt="gmail link"> 
                         <p class="text-email">  Email </p> 
                         </a>
                     </li>
                     <li class="contact-twitter">
                         <a class="twitter" href="https://twitter.com/zhiyin_nlp" title="Twitter">
-                        <img class="contact-icon" src="./pic/twitter_round.ico" alt="twitter link">
+                        <img class="contact-icon" src="../pic/twitter_round.ico" alt="twitter link">
                         <p class="text-twitter"> Twitter </p>
                         </a>
                     </li>
                     <li class="contact-linkedin">
                         <a class="linkedin" href="https://www.linkedin.com/in/zhiyin-tan/" title="Linkedin">
-                        <img class="contact-icon" src="./pic/linkedin.ico" alt="linkedin link">
+                        <img class="contact-icon" src="../pic/linkedin.ico" alt="linkedin link">
                         <p class="text-linkedin"> Linkedin </p>
                         </a>
                     </li>
