--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
 
   <body class="site-home">
-    <header class="site-home-header">
+    <header id="header" class="site-home-header">
         <nav class="site-nav-three" id="navbarResponsive" style="float:left">
             <div class="nav-logo"  role="menu-item">
                 <a href="index.html" class="menu">
