--- a/knowledgebase.html
+++ b/knowledgebase.html
@@ -88,7 +88,7 @@
                     <div class="card">
                         <a class="card-title" href="http://example.org/#blog">
                             <div class="card-cover-image">
-                                <img class="cover-image" src="/pic/beach.png">
+                                <img class="cover-image" src="./pic/beach.png">
                             </div>
                             <div class="card-cover-title">
                                 <h4> Fishing </h4>
