--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <nav class="site-nav-three" id="navbarResponsive" style="float:left">
             <div class="nav-logo"  role="menu-item">
                 <a href="index.html" class="menu">
-                    <img class="logo" src="../pic/logo.ico">
+                    <img class="logo" src="./pic/logo.ico">
                 </a>
             </div>
             <ul class="nav" role="menu">
