--- a/knowledgebase/human_language.html
+++ b/knowledgebase/human_language.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <title>Zhiyin's Intro</title>
-    <meta name="author" content="Zhiyin Tan">
-    <meta name="description" content="Personal fairyland: animation, thoughts">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+        <meta charset="utf-8">
+        <title>Zhiyin's Childhood</title>
+        <meta name="author" content="Zhiyin Tan">
+        <meta name="description" content="Fishing with dad was the best time of my childhood to enjoy nature.">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta property="og:image" content="https://www.icloud.com/iclouddrive/0OuJofHg8h4NTxXeb0weLM3ng#Little_fox's_back-big" />
-    <meta property="og:description" content="Zhiyin Tan's fairyland.">
-    <meta property="og:title" content="Zhiyin's Fairyland" />
-    <meta property="og:type" content="website" />    
+        <meta property="og:image" content="https://www.icloud.com/iclouddrive/0OuJofHg8h4NTxXeb0weLM3ng#Little_fox's_back-big" />
+        <meta property="og:description" content="Zhiyin Tan's fairyland">
+        <meta property="og:title" content="Zhiyin's Fairyland" />
+        <meta property="og:type" content="website" />    
 
-    <link rel="Shortcut Icon" href="../pic/little_fox_round.ico" type="image/x-icon">
+        <link rel="Shortcut Icon" href="../pic/little_fox_round.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="../css/index.css">
-    <script src="../js/index.js" defer></script>
-  </head>
-  
+        <link rel="stylesheet" href="../css/index.css">
+        <script src="../js/csi.js"></script>
+    </head>
 
-    <body onload="fillHeaderDOM()">
-        <div class="intro">  
-            <p> I'm a M.Sc. student in 
-                <a href="https://www.ims.uni-stuttgart.de/en/">Institute for Natural Language Processing</a> 
-                at 
-                <a href="https://www.uni-stuttgart.de/en/">University of Stuttgart</a> in Germany,
-                focusing on problems in <em>contextualisation</em> of <strong>Natural Language Processing</strong>.
-                Currently, I am working on ...
-            </p>
+    <body class="site-home">  
+        <header data-include="../navigation.html"></header>
+
+        <div class="container">
+            <main class="site-kg-main">
+                <div id="start" class="site-kg-content">
+                    <h1 class="site-title"> Human Language </h1>
+                </div>
+                <div style="display:block;z-index: 1000;position: fixed;right: 1px;bottom: 20%;width: 50px;opacity: 0.8;margin-right: 5px;">
+                    <a href="#start">
+                        <img class="to-top" src="../pic/top-arrow_square.ico">
+                    </a>
+                </div> 
+            </main>
+
+            <footer data-include="../footer.html"></footer>
         </div>
     </body>
 </html>
