--- a/knowledgebase.html
+++ b/knowledgebase.html
@@ -15,37 +15,11 @@
     <link rel="Shortcut Icon" href="./pic/little_fox_round.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/index.js" defer></script>
+    <script src="./js/csi.js" defer></script>
   </head>
 
   <body class="site-kb">
-    <header class="site-home-header">
-        <nav class="site-nav-three" id="navbarResponsive" style="float:left">
-            <div class="nav-logo"  role="menu-item">
-                <a href="index.html" class="menu">
-                    <img class="logo" src="./pic/logo.ico">
-                </a>
-            </div>
-            <ul class="nav" role="menu">
-                <li class="nav-about" role="menu-item">
-                    <a href="about.html" class="menu">About</a>
-                </li>
-                <li class="nav-knowledge-base" role="menu-item">
-                    <a href="knowledgebase.html" class="menu">Knowledge Base</a>
-                </li>
-                <li class="nav-fairyland" role="menu-item">
-                    <a href="fairyland.html" class="menu">Fairyland</a>
-                </li>
-            </ul>
-            <ul class="nav-social">
-                <li class="nav-social-github">
-                    <a href="https://github.com/zhiyin121/" title="Github">
-                        <img class="icon" src="./pic/github_icon.ico" alt="github link">
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <header data-include="./navigation.html"></header>
 
     <div class="container">
         <main class="site-kg-main">
@@ -53,7 +27,7 @@
                 <h1 class="site-title"> Knowledge Base </h1>
                 <div class="knowledge-card">
                     <div class="card">
-                        <a class="card-title" href="http://example.org/#blog">
+                        <a class="card-title" href="knowledgebase/computational_linguistics.html">
                             <div class="card-cover-image">
                                 <img class="cover-image" src="./pic/Rooms_by_the_sea.png">
                             </div>
@@ -64,7 +38,7 @@
                         </a>
                     </div> 
                     <div class="card">
-                        <a class="card-title" href="http://example.org/#blog">
+                        <a class="card-title" href="knowledgebase/human_language.html">
                             <div class="card-cover-image">
                                 <img class="cover-image" src="./pic/purple_sea.png">
                             </div>
@@ -75,7 +49,7 @@
                         </a>
                     </div> 
                     <div class="card">
-                        <a class="card-title" href="http://example.org/#blog">
+                        <a class="card-title" href="knowledgebase/knowledge_graph.html">
                             <div class="card-cover-image">
                                 <img class="cover-image" src="./pic/flower.png">
                             </div>
@@ -86,7 +60,7 @@
                         </a>
                     </div> 
                     <div class="card">
-                        <a class="card-title" href="http://example.org/#blog">
+                        <a class="card-title" href="knowledgebase/fishing.html">
                             <div class="card-cover-image">
                                 <img class="cover-image" src="./pic/beach.png">
                             </div>
@@ -105,32 +79,7 @@
             </div>
         </main>
 
-        <footer class="site-home-footer">
-            <div class="copyright-contact">
-                <p class="copyright"> © 2021 Zhiyin Tan</p>
-                <ul class="footer-contact">
-                    <li class="contact-email">
-                        <a class="email" href="mailto:zhiyin121@gmail.com?subject=[ZYFL]%20-%20">
-                        <img class="contact-icon" src="./pic/gmail_icon.ico" alt="gmail link"> 
-                        <p class="text-email">  Email </p> 
-                        </a>
-                    </li>
-                    <li class="contact-twitter">
-                        <a class="twitter" href="https://twitter.com/zhiyin_nlp" title="Twitter">
-                        <img class="contact-icon" src="./pic/twitter_round.ico" alt="twitter link">
-                        <p class="text-twitter"> Twitter </p>
-                        </a>
-                    </li>
-                    <li class="contact-linkedin">
-                        <a class="linkedin" href="https://www.linkedin.com/in/zhiyin-tan/" title="Linkedin">
-                        <img class="contact-icon" src="./pic/linkedin.ico" alt="linkedin link">
-                        <p class="text-linkedin"> Linkedin </p>
-                        </a>
-                    </li>
-                </ul>
-                <p></p>
-            </div>
-        </footer>
+        <footer data-include="./footer.html"></footer>
     </div>
   </body>
 </html>
