--- a/navigation.html
+++ b/navigation.html
@@ -1,7 +1,7 @@
 <header id="header" class="site-home-header">
     <nav class="site-nav-three" id="navbarResponsive" style="float:left">
         <div class="nav-logo"  role="menu-item">
-            <a href="index.html" class="menu">
+            <a href="/index.html" class="menu">
                 <img class="logo" src="/pic/logo.ico">
             </a>
         </div>
