update Cantonese vowels starting with 'a'

--- a/knowledgebase/human_language.html
+++ b/knowledgebase/human_language.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
-        <title>Zhiyin's Childhood</title>
+        <title>Zhiyin's Language Learning</title>
         <meta name="author" content="Zhiyin Tan">
-        <meta name="description" content="Fishing with dad was the best time of my childhood to enjoy nature.">
+        <meta name="description" content="Language learning">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <meta property="og:image" content="https://www.icloud.com/iclouddrive/0OuJofHg8h4NTxXeb0weLM3ng#Little_fox's_back-big" />
@@ -25,6 +25,80 @@
             <main class="site-kg-main">
                 <div id="start" class="site-kg-content">
                     <h1 class="site-title"> Human Language </h1>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <th></th>
+                                <th>z</th><th>c</th><th>s</th>
+                                <th>|</th>
+                                <th>z</th><th>c</th><th>s</th>
+                                <th></th>
+                            </tr>
+                            <tr>
+                                <th>aa</th>
+                                <th>喳</th> <th>叉</th><th>沙</th>
+                                <th>｜</th>
+                                <th>-</th><th>-</th><th>-</th>
+                                <th></th>
+                            </tr>
+                            <tr>
+                                <th>aai</th>
+                                <th>斋</th><th>猜</th> <th>晒</th>
+                                <th>|</th>
+                                <th>挤</th><th>妻</th><th>西</th>
+                                <th>ai</th>
+                            </tr>
+                            <tr>
+                                <th>aau</th>
+                                <th>嘲</th><th>抄</th><th>梢</th>
+                                <th>|</th>
+                                <th>州</th><th>秋</th><th>收</th>
+                                <th>au</th>
+                            </tr>
+                            <tr>
+                                <th>aam</th>
+                                <th>簪</th><th>参</th><th>三</th>
+                                <th>|</th>
+                                <th>针</th><th>侵</th><th>心</th>
+                                <th>am</th>    
+                            </tr>
+                            <tr>
+                                <th>aan</th>
+                                <th>盞</th><th>餐</th><th>山</th>
+                                <th>|</th>
+                                <th>真</th><th>亲</th><th>伸</th>
+                                <th>an</th>  
+                            </tr>
+                            <tr>
+                                <th>aang</th>
+                                <th>争</th><th>撑</th><th>生</th>
+                                <th>|</th>
+                                <th>睁</th><th>曾</th><th>生</th>
+                                <th>ang</th>  
+                            </tr>
+                            <tr>
+                                <th>aap</th>
+                                <th>习</th><th>插</th><th>圾</th>
+                                <th>|</th>
+                                <th>执</th><th>辑</th><th>湿</th>
+                                <th>ap</th>  
+                            </tr>
+                            <tr>
+                                <th>aat</th>
+                                <th>扎</th><th>察</th><th>刹</th>
+                                <th>|</th>
+                                <th>质</th><th>七</th><th>失</th>
+                                <th>at</th>  
+                            </tr>
+                            <tr>
+                                <th>aak</th>
+                                <th>窄</th><th>拆</th><th>索</th>
+                                <th>|</th>
+                                <th>则</th><th>测</th><th>塞</th>
+                                <th>ak</th>  
+                            </tr>
+                        </tbody>
+                    </table>    
                 </div>
                 <div style="display:block;z-index: 1000;position: fixed;right: 1px;bottom: 20%;width: 50px;opacity: 0.8;margin-right: 5px;">
                     <a href="#start">
