renew the link to fireworks

--- a/fairyland.html
+++ b/fairyland.html
@@ -26,7 +26,7 @@
                 <div id="start" class="site-fl-content">          
                     <h1 class="site-title"> Fairyland </h1>
                         <p>Make a wish   
-                            <a class="card-title" href="knowledgebase/computational_linguistics.html">here</a>
+                            <a class="card-title" href="fireworks.html">here</a>
                             , you lovely one.
                         </p>
                 </div>
